--- a/tree.html
+++ b/tree.html
@@ -112,15 +112,12 @@
 						</div>
 						<input class="size" type="number">
 					</div>
-					<div class="prof__sist-items bid">
-						<span class="prof__sist-props-items">ОСТАВИТЬ ЗАЯВКУ</span>
-					</div>
 				</div>
 				<!--------------------------->
 				
 
 				<div class="window__props-size-image">
-					<div class="num34">
+					<div class="num34" id="second34">
 						<label>4</label>
 					</div>
 					<label class="type-name">
@@ -152,7 +149,9 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="prof__sist-items bid">
+			<span class="prof__sist-props-items">ОСТАВИТЬ ЗАЯВКУ</span>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="js/jquery.js"></script>
