--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				
 
 				<div class="window__props-size-image">
-					<div class="num34">
+					<div class="num34 second34">
 						<label>4</label>
 					</div>
 					<label class="type-name">
