--- a/tree.html
+++ b/tree.html
@@ -117,7 +117,7 @@
 				
 
 				<div class="window__props-size-image">
-					<div class="num34" id="second34">
+					<div class="num34 second34">
 						<label>4</label>
 					</div>
 					<label class="type-name">
