--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
 				
 
 				<div class="window__props-size-image">
-					<div class="second34 num34">
+					<!-- <div class="second34 num34"> -->
 					<div class="num34 second34">
+						
 						<label>4</label>
 					</div>
 					<label class="type-name">
@@ -163,11 +164,11 @@
 			<span class="prof__sist-props-items">ОСТАВИТЬ ЗАЯВКУ</span>
 		</div>
 	</div>
-
+<!-- 
 
 	<div class="prof__sist-items bid">
 		<span class="prof__sist-props-items">ОСТАВИТЬ ЗАЯВКУ</span>
-	</div>
+	</div> -->
 
 	<div class="pop-up">
 		<img src="img/x.png">
