--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="first" class="index">
 		<div id="menu">
-			<div class="menu selected_menu"><span><a href="index.html">Калькулятор пластиковых окон</a></span></div>
+			<div class="menu selected_menu"><a href="index.html">Калькулятор пластиковых окон</a></div>
 			<div class="menu"><a href="tree.html">Калькулятор деревянных окон</a></div>
 		</div>
 		<div class="window__props">
@@ -97,7 +97,7 @@
 						<option value="REHAU Sib-Design">REHAU Sib-Design</option>
 						</select>
 					</div>
-					<div style="padding: 0" class="prof__sist-props">
+					<div style="padding: 0; display: flex; align-items: flex-start" class="prof__sist-props">
 						<span class="prof__sist-props-items">Фурнитура</span><div class="checkbox"></div>
 					</div>
 					<div style="padding: 0 0 16.5px 0" class="prof__sist-1 prof__sist">
