--- a/tree.html
+++ b/tree.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="first" class="tree">
 		<div id="menu">
-			<div class="menu"><span><a href="index.html">Калькулятор пластиковых окон</a></span></div>
+			<div class="menu"><a href="index.html">Калькулятор пластиковых окон</a></div>
 			<div class="menu selected_menu"><a href="tree.html">Калькулятор деревянных окон</a></div>
 		</div>
 		<div class="window__props">
@@ -95,10 +95,21 @@
 						<option value="dub">Дуб</option>
 						</select>
 					</div>
-					<div class="prof__sist-props">
-						<span class="prof__sist-props-items">Простивавзломная фурнитура</span><div class="checkbox"></div>
-						<span class="prof__sist-props-items">Аллюминовый оклад</span><div class="checkbox"></div>
-						<span class="minus1 prof__sist-props-items">Энергосберегающий стеклопайкет</span><div class="checkbox"></div>
+					<div class="prof__sist-props prof__wood">
+						<div class='prof__sist-props-options'>
+							<div class='prof__sist-props-option'>
+								<span>Простивавзломная фурнитура</span>
+								<div class="checkbox"></div>
+							</div>
+							<div class='prof__sist-props-option'>
+								<span>Аллюминовый оклад</span>
+								<div class="checkbox"></div>
+							</div>
+						</div>
+						<div class='prof__sist-props-option'>
+							<span>Энергосберегающий стеклопайкет</span>
+							<div class="checkbox"></div>
+						</div>
 					</div>
 					<div class="prof__sist">
 						<div class="prof__sist-items">
