Pop Up finish with mobile and dekstop

--- a/tree.html
+++ b/tree.html
@@ -154,6 +154,15 @@
 		</div>
 	</div>
 
+	<div class="pop-up">
+		<img src="img/x.png">
+		<span>ЗАЯВКА НА РАССЧЕТ</span>
+		<input spelcheck="false" type="text" name="user_name" placeholder="Имя">
+		<input spelcheck="false" type="number" name="phone" placeholder="Ваш телефон">
+		<button>ОТПРАВИТЬ</button>
+	</div>
+	<div class="black"></div>
+	
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
