--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="first">
+	<div id="first" class="index">
 		<div id="menu">
 			<div class="menu selected_menu"><span><a href="index.html">Калькулятор пластиковых окон</a></span></div>
 			<div class="menu"><a href="tree.html">Калькулятор деревянных окон</a></div>
@@ -136,7 +136,7 @@
 					</label>
 					<div class="windowsize">
 						<div class="wsize">
-							<img class="big-window" src="img/big-1.jpg">
+							<img class="big-window" src="img/plastic/big-1.jpg">
 						</div>
 						<span class="size-value1 size-value">0</span>
 						<div class="first-size-animate size-animate">
