--- a/tree.html
+++ b/tree.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="first">
+	<div id="first" class="tree">
 		<div id="menu">
 			<div class="menu"><span><a href="index.html">Калькулятор пластиковых окон</a></span></div>
 			<div class="menu selected_menu"><a href="tree.html">Калькулятор деревянных окон</a></div>
